Thu Jul 22 19:21:28 UTC 2010  Phil Mesnier  <mesnier_p@ociweb.com>

        * examples/CSD_Strategy/ThreadPool4/Foo.idl:
        * orbsvcs/orbsvcs/miop.idl:
        * orbsvcs/tests/InterfaceRepo/IFR_Self_Recursive_IDL_Test/Test.idl:
        * performance-tests/Anyop/test.idl:
        * tests/Bug_2119_Regression/test.idl:
        
          Fix anonymous type errors.

Thu Jul 22 03:57:34 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * TAO_IDL/util/utl_err.cpp:
        * TAO_IDL/util/utl_global.cpp:

          Fuzz.

Wed Jul 21 21:38:11 UTC 2010  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/orbsvcs/RtecUDPAdmin.idl:
        * orbsvcs/orbsvcs/miop.idl:

          Fix anonymous arrays that the IDL compiler now complains about.

Wed Jul 21 16:22:38 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/fe/idl.yy:
        * TAO_IDL/fe/y.tab.cpp:

          Overlooked change in error message call signature.

        * tests/IDL_Test/IDL_Test.mpc:

          Added new option -aw from

          Wed Jul 21 15:02:16 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

          to necessary IDL files.

Wed Jul 21 15:54:27 UTC 2010  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/TAO_Internal.cpp:

          reverted for_TAO specific call to service gestalt open.

Wed Jul 21 15:43:39 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/Sequence_Unit_Tests/value_sequence_tester.hpp:
          Fixed a valgrind complain about uninitialized value.

Wed Jul 21 15:02:16 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/ast/ast_array.cpp:

          Cosmetic changes.

        * TAO_IDL/include/idl_global.h:
        * TAO_IDL/include/utl_err.h:
        * TAO_IDL/fe/y.tab.cpp:
        * TAO_IDL/fe/idl.yy:
        * TAO_IDL/driver/drv_args.cpp:
        * TAO_IDL/util/utl_err.cpp:
        * TAO_IDL/util/utl_global.cpp:

          An error is now output when an anonymous