@@ -265,6 +265,8 @@ interface Param_Test
                                 inout unsigned long s2,
                                 out unsigned long s3)
     raises (Ooops);
+    
+  typedef short short_array[32];
 
   union Big_Union switch (short)
     {
@@ -275,7 +277,7 @@ interface Param_Test
     case 2:
       long the_long;
     case 3:
-      short another_array[32];
+      short_array another_array;
     case 4:
       string the_string;
     case 5:
@@ -335,11 +337,14 @@ interface Param_Test
                         out any ca3);
 
   // Recursive structs. Contains a sequence of itself.
+  struct Recursive_Struct;
+  typedef sequence<Recursive_Struct> RecStructSeq;
+  
   struct Recursive_Struct
     {
       long x;
 
-      sequence<Recursive_Struct> children;
+      RecStructSeq children;
     };
 
   Recursive_Struct test_recursive_struct (in Recursive_Struct rs1,
@@ -348,16 +353,21 @@ interface Param_Test
 
   // Recursive unions. We have one recursive union nested in a different
   // recursive union.
-
+  union nested_rec_union;
+  typedef sequence<nested_rec_union> NestedSeq;
+  
   union nested_rec_union switch (short)
     {
       case 0: long value;
-      case 1: sequence<nested_rec_union> nested_rec_member;
+      case 1: NestedSeq nested_rec_member;
     };
 
+  union Recursive_Union;
+  typedef sequence<Recursive_Union> RecUnionSeq;
+  
   union Recursive_Union switch (short)
     {
-      case 0: sequence<Recursive_Union> rec_member;
+      case 0: RecUnionSeq rec_member;
       case 1: nested_rec_union nested_member;
     };
 
